# forouzan

./: CMakeLists.txt  README.md
example/array/: prg8-1.cpp  prg8-5.cpp
example/circle/: prg7-1.cpp  prg7-2.cpp  prg7-3.cpp  prg8-4.cpp
example/pointer/: prg9-2.cpp
example/student/: prg8-12.cpp
modules/: CMakeLists.txt
modules/moduleCircle/: CMakeLists.txt  circle.cpp
modules/moduleCircle/include/: circle.h
modules/moduleStudent/: CMakeLists.txt  student.cpp
modules/moduleStudent/include/: student.h
